# ifmo-labs

./: .gitignore  .gitmodules  LICENSE  README.md
algo/: README.md
algo/Алгоритмы на строках/: README.md  Z_функция.ml  быстрый_поиск_подстроки_в_строке.rs  количество_подстрок.cpp  множественный_поиск-2.cpp  множественный_поиск-3.cpp  множественный_поиск.cpp  наибольшая_общая_подстрока.cpp  подстроки-3.cpp  поиск_периода.rs  префикс_функция.rb  сравнения_подстрок.cpp  суффиксный_массив.cpp  циклические_сдвиги.cpp
algo/Кратчайшие пути, игры/: Floyd.cpp  README.md  в_посках_утраченного_кефира.cpp  дровосек.cpp  игра.cpp  кратчайшие_пути.cpp  кратчайший_путь---2.cpp  кратчайший_путь_длины_k.cpp  ретроанализ_для_маленьких.cpp  функция_гранди.cpp  цикл_отрицательного_веса.cpp
coding-theory/: 2.ipynb  2.sage.ipynb  3.sage  3.sage.py  4.ipynb  hw1.md  hw1.txt  prac2.ipynb  test.ipynb
coding-theory/a/: .gitignore  CMakeLists.txt  a.cpp  output.txt
coding-theory/j/: .gitignore  a.cpp  output.txt
cpp/2d-tree/: 2dtree.cpp  primitives.h
cpp/bimap/: bimap-helper.h  bimap.h  splay.h
cpp/boe-order-execution/: codec.h  fields.h  fields.inl  new_order_opt_fields.inl  order_execution_fields.inl  order_execution_optional_fields.inl  requests.h
cpp/function_task/: CMakeLists.txt  function-helper.h  function.h
cpp/inverted-index/: main.cpp  searcher.cpp  searcher.h
cpp/lrfu/: allocator.h  cache.h  main.cpp  pool.cpp  pool.h
cpp/optional-practice/: CMakeLists.txt  optional.h  optional_testing.cpp  test_object.cpp  test_object.h
cpp/qt-mandelbrot/: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mandelbrot.cpp  mandelbrot.h  tile.h
cpp/randomized-queue/: main.cpp  randomized_queue.h  subset.cpp  subset.h
cpp/seam-carving/: Image.cpp  Image.h  SeamCarver.cpp  SeamCarver.h  main.cpp
cpp/signal_task/: CMakeLists.txt  intrusive_list.h  signals.h  signals_testing.cpp
cpp/sort-k-t/: main.cpp
cpp/variant/: .clang-format  CMakeLists.txt  main.cpp  test-classes.h  variant.h
ctf/: .gitignore
ctf/6/: awesome.c  gigaawesome.cpp  matcher.txt  megaawesome.cpp  motcher.txt  mutcher.txt  petaawesome.cpp  superawesome.cpp
data-analysis/: .gitignore
data-analysis/1/: 1-solution.ipynb
data-analysis/2/: Lab-2.ipynb
data-analysis/3/: .gitignore  solution.ipynb
data-analysis/4/: Lab-4.ipynb
data-analysis/5/: Lab-5.ipynb
data-analysis/6/: .gitignore  Lab-6.ipynb  README.md
data-analysis/7/: .gitignore  Lab-7.ipynb
databases/5/: 1.1r.dbms  1.1s.sql  1.2r.dbms  1.2s.sql  10.sql  2.1r.dbms  2.2r.dbms  3.1r.dbms  3.1s.sql  3.2r.dbms  3.2s.sql  3.3r.dbms  3.3s.sql  3.4r.dbms  3.4s.sql  3.5r.sql  3.5s.sql  3.6r.dbms  3.6s.sql  4.1r.dbms  4.1s.sql  4.2r.dbms  4.2s.sql  5.1s.sql  5.2r.dbms  5.2s.sql  5.3r.dbms  5.3s.sql  6.1r.dbms  6.1s.sql  6.2r.dbms  6.2s.sql  6.3r.dbms  6.3s.sql  6.4r.dbms  6.4s.sql  7.1r.dbms  7.1s.sql  7.2r.dbms  7.2s.sql  (+9 more)
databases/6/: 1.1.dl  1.1.sql  1.2.dl  1.2.sql  1.3.dl  1.3.sql  1.4.dl  1.4.sql  2.1.dl  2.1.sql  2.2.dl  2.2.sql  2.3.dl  2.3.sql  2.4.dl  2.4.sql  2.5.dl  2.5.sql  3.1.dl  3.1.sql  3.2.dl  3.2.sql  4.1.dl  4.1.sql  4.2.dl  4.2.sql  4.3.dl  4.3.sql  5.1.dl  5.1.sql  5.2.dl  (+10 more)
fp/hw1/: hw1.cabal
fp/hw1/src/HW1/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs  T7.hs
fp/hw2/: .gitignore  hw2.cabal
fp/hw2/src/HW2/: EvalCommon.hs  Expr.hs  T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
fp/hw3/hw3/: README_test.md  hw3.cabal
fp/hw3/hw3/exe/: Main.hs
fp/hw3/hw3/lib/HW3/: AbstractContainer.hs  Action.hs  Base.hs  Evaluator.hs  FunctionStrings.hs  Parser.hs  Pretty.hs
fp/hw3/hw3/lib/HW3/Internal/: Eval.hs  TH.hs
fp/hw3/hw3/test/Hi/Test/: Common.hs  T10Spec.hs  T11Spec.hs  T1Spec.hs  T2Spec.hs  T3Spec.hs  T4Spec.hs  T5Spec.hs  T6Spec.hs  T7Spec.hs  T8Spec.hs  T9Spec.hs
helpers/: pcms_pretty_time.js  scrap.sh
java-advanced/: README.md
languages-and-type-systems/: hw.typ  hw1.hs  hw3.typ  hw4.typ  hw5.typ
logic-magister/: FPIntro.v  NaturalDeduction.v  PropLogic.v
mathlogic-tt/: 10.ard  11.ard  13.ard  tt.ard
os/: README.md
parsers4kgeorgiy/: README.md  expression.clj  objectExpression.js
software-design/: 1.cpp  actors.exs
statistics/: M3236 Прокопенко Кирилл Дмитриевич.xlsx  README.md
translation-methods/2/: README.md  grammar.md  pysets.cabal
translation-methods/2/Pysets/: Exc.hs  Expr.hs  Lex.hs  Par.hs  TH.hs  Tokens.hs
translation-methods/2/app/: Main.hs
translation-methods/2/parser/: Main.hs
translation-methods/2/test/: Main.hs
translation-methods/3/: README.md  obfuscation.cabal  run1.sh  test.sh  test1.sh
translation-methods/3/Obfuscation/: Lex.x  Obf.hs  Par.y  Tokens.hs
translation-methods/3/exe/: Main.hs
translation-methods/3/old/: Expr.hs  Obf.hs
translation-methods/3/test/: adv.c  ifs.c  rand.c  simple.c  test.c  while.c
translation-methods/4/: .gitignore  README.md  test.sh  ylexpar.cabal
translation-methods/4/YLex/: Base.hs  Combinators.hs  Lex.hs
translation-methods/4/YPar/: Par.hs
translation-methods/4/Yada/ParGen/: Combinator.hs  Lex.hs  Par.hs
translation-methods/4/Yada/ParGen/Combinator/: Base.hs  Combinators.hs  Lex.hs
translation-methods/4/calc/: Lex.hs  Main.hs  Token.hs  grammar.ylex  grammar.ypar
translation-methods/4/exe/: .gitignore  Main.hs  Task2Common.hs  Task2Expr.hs  simple.ypar  task2.ypar
translation-methods/4/exe2/: Main.hs
translation-methods/4/inh/: .gitignore  Lex.hs  Main.hs  Token.hs  grammar.ylex  grammar.ypar
translation-methods/4/task2/: Common.hs  Expr.hs  Main.hs  grammar.ylex  grammar.ypar
translation-methods/4/task3/: Main.hs  grammar.ylex  grammar.ypar  test.sh
translation-methods/4/task3/Obfuscation/: .gitignore  Lex.hs  Obf.hs  Par.hs  ParGen.hs  Tokens.hs
type-theory/2/: Lex.x  Main.hs  Makefile  Par.y  Types.hs  pack.sh  test.sh  tt-lab2.cabal
type-theory/2/test/: 1a.corr  1a.incr  1b.incr  1c.incr  2.incr  3.corr  4.incr  free.incr  lam.corr  lam.incr  lam1.incr  lam2.incr  let.corr  let.incr  letmono.incr  letpoly.corr  prettytypes.incr  spec.corr  spec.incr  spec2.corr  spec3.corr  spec3.incr  typo.incr
(+866 files in other folders)
