cabal-version:      2.4
name:               hw1
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- license:
author:             kp2pml30
maintainer:         kp2pml30@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:  HW1.T1 HW1.T2 HW1.T3 HW1.T4 HW1.T5 HW1.T6 HW1.T7
    -- HW0.T2
    -- other-modules:
    default-extensions: TypeOperators
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
