cabal-version:      2.4
name:               hw2
version:            0.0.0.1

license:            GPL-3.0-or-later
author:             kp2pml30
maintainer:         kp2pml30@gmail.com
copyright:          Copyright (C) kp2pml30

library
    exposed-modules:  HW2.T1 HW2.T2 HW2.T3 HW2.T4 HW2.T5 HW2.T6 HW2.EvalCommon HW2.Expr
    default-extensions: BlockArguments 
    build-depends:    base, scientific
    hs-source-dirs:   src
    default-language: Haskell2010
