cabal-version:      2.2
name:               pysets
version:            0.0.0.1

synopsis:           simple top down parser

-- description:
-- bug-reports:

license:            GPL-3.0-or-later
author:             kp2pml30
maintainer:         kp2pml30@gmail.com
copyright:          Copyright (C) kp2pml30

build-type:         Simple
-- category:
-- extra-source-files: CHANGELOG.md

common dflt
    default-language: Haskell2010
    build-depends:
        base, text
    ghc-options:
        -Wall -Wno-tabs -Wno-missing-signatures
    default-extensions:  BangPatterns, RecordWildCards, NamedFieldPuns, BlockArguments

library pysetslib
    import:           dflt
    exposed-modules:
        Pysets.Tokens Pysets.Lex Pysets.Par Pysets.TH Pysets.Expr
    build-depends: mtl, containers, extra, template-haskell, transformers

executable parser
    import:           dflt
    hs-source-dirs:   app
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    pysetslib
