cabal-version:      2.2
name:               pysets
version:            0.0.0.1

synopsis:           simple top down parser

-- description:
-- bug-reports:

license:            GPL-3.0-or-later
author:             kp2pml30
maintainer:         kp2pml30@gmail.com
copyright:          Copyright (C) kp2pml30

build-type:         Simple
-- category:
-- extra-source-files: CHANGELOG.md

common dflt
    default-language: Haskell2010
    build-depends:
        base, text
    ghc-options:
        -Wall -Wno-tabs -Wno-missing-signatures -Wno-name-shadowing
    default-extensions:  BangPatterns, RecordWildCards, NamedFieldPuns, BlockArguments

library obfusc
    import:           dflt
    exposed-modules:
        Obfuscation.Lex Obfuscation.Tokens Obfuscation.Par Obfuscation.Obf
    build-depends: mtl, containers, extra, template-haskell, transformers, array

executable parser
    import:           dflt
    hs-source-dirs:   exe
    main-is:          Main.hs
    build-depends:    obfusc, process, mtl, random


-- Test-Suite test-basic
--		import:           dflt
--		type:             exitcode-stdio-1.0
--		hs-source-dirs:   test
--		main-is:          Main.hs
--		build-depends:    pysetslib, test-framework, test-framework-hunit, HUnit
