cabal-version:      2.2
name:               ylexpar
version:            0.0.0.1

synopsis:           simple lexer-parser generator

-- description:
-- bug-reports:

license:            GPL-3.0-or-later
author:             kp2pml30
maintainer:         kp2pml30@gmail.com
copyright:          Copyright (C) kp2pml30

build-type:         Simple

common dflt
    default-language: Haskell2010
    build-depends:
        base, text
    ghc-options:
        -Wall -Wno-tabs -Wno-missing-signatures -Wno-name-shadowing
    default-extensions:  BangPatterns, RecordWildCards, NamedFieldPuns, BlockArguments, ScopedTypeVariables, DerivingStrategies, GeneralizedNewtypeDeriving, TupleSections

library ylexer
    import:           dflt
    exposed-modules:
        YLex.Lex YLex.Base YLex.Combinators YPar.Par
    build-depends: mtl, containers, extra, template-haskell, transformers, array

executable parser
    import:           dflt
    hs-source-dirs:   exe
    main-is:          Main.hs
    other-modules:    Task2 Task2Common Task2Expr
    build-depends:    ylexer, extra, containers, mtl, transformers


-- Test-Suite test-basic
--		import:           dflt
--		type:             exitcode-stdio-1.0
--		hs-source-dirs:   test
--		main-is:          Main.hs
--		build-depends:    pysetslib, test-framework, test-framework-hunit, HUnit
