cabal-version:      2.2
name:               ylexpar
version:            0.0.0.1

synopsis:           simple lexer-parser generator

-- description:
-- bug-reports:

license:            GPL-3.0-or-later
author:             kp2pml30
maintainer:         kp2pml30@gmail.com
copyright:          Copyright (C) kp2pml30

build-type:         Simple

common dflt
    default-language: Haskell2010
    build-depends:
        base, text
    ghc-options:
        -Wall -Wno-tabs -Wno-missing-signatures -Wno-name-shadowing
    default-extensions:  BangPatterns, RecordWildCards, NamedFieldPuns, BlockArguments, ScopedTypeVariables, DerivingStrategies, GeneralizedNewtypeDeriving, TupleSections

library ygrammargen
    import:           dflt
    exposed-modules:
        YLex.Lex YLex.Base YLex.Combinators YPar.Par
    build-depends: mtl, containers, extra, template-haskell, transformers, array

executable ygrammar
    import:           dflt
    hs-source-dirs:   exe
    main-is:          Main.hs
    build-depends:    ygrammargen, extra, containers, mtl, transformers

Test-Suite test2
    import:           dflt
    hs-source-dirs:   task2
    main-is:          Main.hs
    other-modules:    Par Common Expr
    type:             exitcode-stdio-1.0
    build-depends:    ygrammargen, test-framework, test-framework-hunit, HUnit, extra, containers, mtl, transformers

executable task3
    import:           dflt
    hs-source-dirs:   task3
    main-is:          Main.hs
    other-modules:    Obfuscation.Lex Obfuscation.ParGen Obfuscation.Par Obfuscation.Obf Obfuscation.Tokens
    build-depends:    ygrammargen, extra, containers, mtl, transformers, random

