cabal-version:      2.4
name:               hw3
version:            0.0.0.1

license:            GPL-3.0-or-later
author:             kp2pml30
maintainer:         kp2pml30@gmail.com
copyright:          Copyright (C) kp2pml30

common dflt
    default-language: Haskell2010
    build-depends:
        base, text, mtl, transformers, containers
    ghc-options:
        -Wall
        -Wno-tabs
        -Wno-name-shadowing
    default-extensions:
        BangPatterns
        RecordWildCards
        NamedFieldPuns
        BlockArguments
        ScopedTypeVariables
        DerivingStrategies
        GeneralizedNewtypeDeriving
        TupleSections


library
    import:           dflt
    hs-source-dirs:   lib
    exposed-modules:
        HW3.Base
        HW3.Parser
        HW3.Pretty
        HW3.Evaluator
        HW3.FunctionStrings
        HW3.AbstractContainer
        HW3.Action
        HW3.Internal.TH
        HW3.Internal.Eval
    build-depends:
        base,
        megaparsec,
        parser-combinators,
        prettyprinter,
        prettyprinter-ansi-terminal,
        scientific,
        bytestring,
        zlib,
        serialise,
        generic-deriving,
        directory,
        extra,
        time,
        random,
        template-haskell

executable hi
    import:           dflt
    hs-source-dirs:   exe
    main-is:          Main.hs
    build-depends:    hw3, haskeline, prettyprinter, prettyprinter-ansi-terminal, megaparsec


Test-Suite basic-tests
    import:           dflt
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    default-extensions:
        QuasiQuotes
        CPP
    other-modules:
        Hi.Test.Common
        Hi.Test.T1Spec
        Hi.Test.T2Spec
        Hi.Test.T3Spec
        Hi.Test.T4Spec
        Hi.Test.T5Spec
        Hi.Test.T6Spec
        Hi.Test.T7Spec
        Hi.Test.T8Spec
        Hi.Test.T9Spec
        Hi.Test.T10Spec
        Hi.Test.T11Spec
    cpp-options: -DHI_TEST_UPTO=11
    build-depends:
        hw3,
        hspec,
        hedgehog,
        hspec-hedgehog,
        megaparsec,
        either,
        raw-strings-qq,
        HUnit,
        directory,
        strict
    build-tool-depends: hspec-discover:hspec-discover
